<resources>
    <string name="app_name" translatable="false">Help A Paw</string>
    <string name="txt_invalid_email">Invalid email.</string>
    <string name="txt_invalid_password">The password is too short.</string>
    <string name="txt_invalid_password_confirmation">The two entered passwords are not the same.</string>
    <string name="txt_email_hint">Email</string>
    <string name="txt_password_hint">Password</string>
    <string name="txt_password_confirmation_hint">Confirm Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_no_account_yet">No account yet?</string>
    <string name="txt_user_profile_title">Profile</string>
    <string name="txt_delete_account">Delete account</string>
    <string name="txt_delete_account_dialog">Are you sure you want to delete your account?</string>
    <string name="txt_register">Register</string>
    <string name="txt_already_a_member">Already a member?</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_name">Name</string>
    <string name="txt_name_required">The name is required!</string>
    <string name="txt_why">Why?</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="txt_log_in">Log In</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_no_internet">No Internet connection!</string>
    <string name="txt_signals_map">Signals Map</string>
    <string name="txt_why_want_phone">Why do you want my phone number?</string>
    <string name="txt_why_phone_description">Entering your phone number is not required for registration. However, we strongly encourage you to fill it so you can be quickly
        reached if a volunteer needs information about a signal that you submitted.
    </string>
    <string name="txt_i_see">I see</string>
    <string name="txt_location_permission_not_granted">Location permissions not granted!</string>
    <string name="txt_signal_description">Signal description</string>
    <string name="txt_signal_phone">Your phone</string>
    <string name="txt_send">Send</string>
    <string name="txt_take_photo">Take Photo</string>
    <string name="txt_choose_existing">Choose Existing</string>
    <string name="permission_not_granted">Permission was not granted!</string>
    <string name="txt_storage_permissions_for_camera">Sorry we could not open the camera without your permission.</string>
    <string name="txt_storage_permissions_for_gallery">Sorry we could not open the gallery without your permission.</string>
    <string name="txt_location_permissions_for_map">Sorry we could not get your location without your permission.</string>
    <string name="txt_status_help_needed">Status: Help needed</string>
    <string name="txt_status_somebody_on_the_way">Status: Somebody on the way</string>
    <string name="txt_status_solved">Status: Solved</string>
    <string name="txt_description_required">Signal description is required!</string>
    <string name="txt_signal_added_successfully">Signal successfully added!</string>
    <string name="txt_logout_succeeded">You successfully logged out.</string>
    <string name="txt_logout_failed_because">Logout failed because: \'%1$s\'.</string>
    <string name="txt_logout_failed">Logout failed</string>
    <string name="txt_only_registered_users_can_submit_signals">Only registered users can submit signals</string>
    <string name="txt_navigate_to">Navigate me</string>
    <string name="txt_save">Save</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_signal_details_title">Signal Details</string>
    <string name="txt_signal_was_deleted">The signal was deleted!</string>
    <string name="txt_upload_photo">Upload photo</string>
    <string name="txt_share">Share</string>
    <string name="txt_edit_title">Edit</string>
    <string name="txt_delete_signal">Delete</string>
    <string name="txt_delete_signal_dialog">Are you sure you want to delete the signal?</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_signal_from">Signal from %1$s</string>
    <string name="txt_comment_hint">Enter a comment</string>
    <string name="txt_error_empty_comment">Comment should not be empty!</string>
    <string name="txt_no_comments">There are no comments yet.</string>
    <string name="txt_signal_photo_description">Signal Photo</string>
    <string name="txt_progress_indicator_description">Progress indicator</string>
    <string name="txt_somebody_on_the_way">Somebody on the way</string>
    <string name="txt_solved">Solved</string>
    <string name="txt_help_needed">Help needed</string>
    <string name="txt_status">Status</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_filter_signals">Filter signals</string>
    <string name="txt_status_updated">Status successfully updated!</string>
    <string name="txt_you_help_is_needed">Your help is needed!</string>
    <string name="txt_somebody_is_on_the_way">Somebody is on the way</string>
    <string name="txt_new_signal">New signal</string>
    <string name="txt_new_comment">New comment</string>
    <string name="txt_new_status">New status</string>
    <string name="error_facebook_not_installed">Facebook not installed</string>
    <string name="text_my_signals">My Signals</string>
    <string name="no_signals_message">You do not have any signals.</string>
    <string-array name="my_signal_items">
        <item>Submitted Signals</item>
        <item>Commented Signals</item>
    </string-array>
    <string name="text_my_notifications">My Notifications</string>
    <string name="no_notifications_message">You do not have notifications</string>
    <string name="txt_delete_notifications_dialog">Are you sure you want to delete all the notifications?</string>
    <string name="text_faqs">FAQs</string>
    <string name="text_about">About</string>
    <string name="text_share">Share</string>
    <string name="text_feedback">Feedback</string>
    <string name="txt_faqs_view_title">FAQs</string>
    <string name="text_settings">Settings</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="txt_user_changed_status_to">%1$s changed the status to \'%2$s\'</string>
    <string name="txt_new_status_icon">New status icon</string>
    <string name="string_about_title">About</string>
    <string name="string_about_contact">Contact us</string>
    <string name="string_about_milen">© Milen Marinov 2022</string>
    <string name="string_share_text">Do you like the application? Share it with your friends!</string>
    <string name="string_share_app_text">I found a great app for helping animals in need: %s</string>
    <string name="string_share_app_reminder_title">Share the application!</string>
    <string name="string_share_app_reminder_message">We\'ve noticed that you often use the application. Do you want to share it with your friends?</string>
    <string name="string_share_button">Share</string>
    <string name="string_share_later">Later</string>
    <string name="string_support_email" translatable="false">help.a.paw@outlook.com‌</string>
    <string name="string_share_link" translatable="false">https://helpapaw.app.link/install</string>
    <string name="string_mail_chooser_title" translatable="false">help.a.paw@outlook.com‌</string>
    <string name="error_empty_signal_response">Got empty response! Signal not present anymore!?</string>
    <string name="txt_channel_description_help_needed">"Shows signals for animals near you that are in (urgent) need of help"</string>
    <string name="txt_channel_description_somebody_on_the_way">"Shows signals for which help is on the way but are still not solved"</string>
    <string name="txt_or">or</string>
    <string name="string_faq"><![CDATA[ <font color=\'#ff9700\'>
        <b>&emsp;How does this app work?</b>
        <br>
        If you see a stray animal that needs help but for some reason cannot provide the help yourself you can submit a signal that marks the place and describes the situation. Other people that are nearby will receive a notification about it. Hopefully someone will react to the signal and help the animal.
        <br><br>
        <b>&emsp;Who are the people that will help those animals?</b>
        <br>
        Help A Paw connects a network of volunteers that care about animals - just like you!
        <br><br>
        <b>&emsp;How does the status of the signal change?</b>
        <br>
        When a signal is submitted it starts with status \'Help needed\'. When somebody decides to answer the signal he/she changes the status to \'Somebody on the way\' so that other people know. If for example the person arrives at the place but needs some assistance the status can be changed back to \'Help needed\'. When the animal finally receives the needed help the signal is marked as \'Solved\'. Signals are color-coded in red, orange and green according to their status.
        <br><br>
        <b>&emsp;Does this app track my location?</b>
        <br>
        No. Your location is obtained and used only locally on your device. It will not be recorded on a server or used with any other purpose beside notifying you of animals in need in your area.</font>]]>
     </string>
    <string name="privacy_policy_dialog_title">Privacy Policy</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="txt_radius">RADIUS</string>
    <string name="txt_radius_description">The area around your current location at any moment that you want to be notified if new signals appear.</string>
    <string name="txt_signal_timeout">SIGNAL TIMEOUT</string>
    <string name="txt_timeout_description">How old signals you want to be notified about</string>
    <string name="radius_output">%d kilometers</string>
    <string name="radius_output_single">%d kilometer</string>
    <string name="timeout_output">%d days</string>
    <string name="timeout_output_single">%d day</string>
    <string name="txt_success">Success</string>
    <string name="txt_error">Error</string>
    <string name="txt_unknown_error_occurred">Unknown error occurred</string>
    <string name="txt_registration_successful">A confirmation link has been sent on your email. Please click it to complete your registration.</string>
    <string name="content_description_app_logo">App logo</string>
    <string name="txt_error_getting_privacy_policy">Could not get Privacy Policy!</string>
    <string name="txt_login_successful">Login successful!</string>
    <string name="txt_registration_required">Registration required</string>
    <string name="txt_only_registered_users_can_comment">Only registered users can write comments</string>
    <string name="txt_only_registered_users_can_change_status">Only registered users can change signal status</string>
    <string name="txt_only_registered_users_can_see_my_signals">Only registered users can see this section</string>
    <string name="txt_confirm_password_reset">If you have already registered but have forgotten your password you can reset it. Do you want to continue?</string>
    <string name="txt_password_reset_successful">We sent you an email with a link from which you can reset your password</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="shared_preferences_for_app" translatable="false">defaultSharedPreferences</string>
    <string name="txt_logged_user_not_found">Logged in user not found!</string>
    <string-array name="signal_types_items">
        <item>Emergency</item>
        <item>Lost or Found</item>
        <item>Blood donation</item>
        <item>Homeless</item>
        <item>Unneutered animals</item>
        <item>Wild animals</item>
        <item>Other</item>
    </string-array>
    <string name="txt_filter_signal_types_description">Choose signal types you want to view</string>
</resources>