<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="6dp">

    <ImageView
        android:id="@+id/img_signal_photo"
        android:layout_width="@dimen/thumbnail_size"
        android:layout_height="@dimen/thumbnail_size"
        android:layout_marginEnd="5dp"
        android:padding="2dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_camera" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_signal_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/thumbnail_size"
            android:background="@drawable/rounded_border"
            android:hint="@string/txt_signal_description"
            android:inputType="textAutoComplete|textAutoCorrect|textCapSentences|textMultiLine"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/gray"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/edit_author_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/thumbnail_size"
            android:background="@drawable/rounded_border"
            android:hint="@string/txt_signal_phone"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/gray"
            android:autofillHints="phoneNational" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_signal_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:gravity="center_vertical"
            android:text="@string/txt_send"
            android:textColor="@color/color_primary"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progress_send_signal"
            style="?android:attr/progressBarStyleSmallInverse"
            android:layout_width="@dimen/thumbnail_size"
            android:layout_height="@dimen/thumbnail_size"
            android:layout_marginLeft="10dp"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>