<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/grp_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="10dp"
                android:textSize="18sp"
                android:textColor="@color/color_accent"
                android:text="@string/txt_email_hint" />
            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/thumbnail_size"
                android:background="@drawable/rounded_border"
                android:hint="@string/txt_email_hint"
                android:enabled="false"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/gray"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="10dp"
                android:textSize="18sp"
                android:textColor="@color/color_accent"
                android:text="@string/txt_name" />
            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/thumbnail_size"
                android:background="@drawable/rounded_border"
                android:hint="@string/txt_name"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/gray"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="10dp"
                android:textSize="18sp"
                android:textColor="@color/color_accent"
                android:text="@string/txt_phone_number" />
            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/thumbnail_size"
                android:background="@drawable/rounded_border"
                android:hint="@string/txt_phone_number"
                android:enabled="false"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/gray"
                android:importantForAutofill="no" />

            <RelativeLayout
                android:id="@+id/author_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_saveEditUser"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/txt_save"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="10dp"
                android:textSize="18sp"
                android:textColor="@color/color_accent"
                android:text="@string/txt_password_change" />
        </LinearLayout>
    </RelativeLayout>
</layout>